--- a/hackeroshrdp.ipynb
+++ b/hackeroshrdp.ipynb
@@ -31,7 +31,7 @@
         "id": "VJZueKtXqzC5"
       },
       "source": [
-        "#@title Start Colab RDP\n",
+        "#@title Start Hackerosh RDP\n",
         "import apt, apt.debfile\n",
         "import pathlib, stat, shutil, urllib.request, subprocess, getpass, time, tempfile\n",
         "import secrets, json, re\n",
