--- a/hackeroshrdp.ipynb
+++ b/hackeroshrdp.ipynb
@@ -142,8 +142,8 @@
         "    shutil.unpack_archive(\"ngrok.zip\")\n",
         "    pathlib.Path(\"ngrok\").chmod(stat.S_IXUSR)\n",
         "\n",
-        "  root_password = \"12345678\"\n",
-        "  user_password = \"12345678\"\n",
+        "  root_password = \"hackerosh\"\n",
+        "  user_password = \"hackerosh\"\n",
         "  user_name = \"colab\"\n",
         "  msg += f\"root password: {root_password}\\n\"\n",
         "  msg += f\"{user_name} password: {user_password}\\n\"\n",
@@ -269,8 +269,8 @@
         "  vncrun_py.write_text(\"\"\"\\\n",
         "import subprocess, secrets, pathlib\n",
         "\n",
-        "vnc_passwd = \"12345678\"[:8]\n",
-        "vnc_viewonly_passwd = \"87654321\"[:8]\n",
+        "vnc_passwd = \"hackerosh\"[:8]\n",
+        "vnc_viewonly_passwd = \"roshankumar\"[:8]\n",
         "print(\"VNC password: {}\".format(vnc_passwd))\n",
         "print(\"VNC view only password: {}\".format(vnc_viewonly_passwd))\n",
         "vncpasswd_input = \"{0}\\\\n{1}\".format(vnc_passwd, vnc_viewonly_passwd)\n",
