Update and rename hackeroshrdp.ipynb to createrdp.ipynb

--- a/createrdp.ipynb
+++ b/createrdp.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "hackeroshrdp.ipynb",
+      "name": "createrdp.ipynb",
       "provenance": [],
       "collapsed_sections": [],
       "include_colab_link": true
@@ -21,7 +21,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/hackerosh/hackeroshrdp/blob/main/hackeroshrdp.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/roshankumarsahani/createrdp/blob/main/createrdp.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -31,7 +31,7 @@
         "cellView": "form"
       },
       "source": [
-        "#@title Start Hackerosh RDP\n",
+        "#@title Start Create RDP\n",
         "import apt, apt.debfile\n",
         "import pathlib, stat, shutil, urllib.request, subprocess, getpass, time, tempfile\n",
         "import secrets, json, re\n",
